// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders correctly 1`] = `
<DocumentFragment>
  .cache-z0gtcm {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-z0gtcm:hover .e1duuirp3,
.cache-z0gtcm:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-z0gtcm:hover .e1duuirp3>.e1duuirp4,
.cache-z0gtcm:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-14h2zyo {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-14h2zyo.cache-14h2zyo {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-x3o9mj {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      class="e1duuirp2 e1g1zfwd0 cache-z0gtcm"
      for="radio-choice"
    >
      <div
        class="cache-tn3xtd e1duuirp3"
      >
        <svg
          class="e1duuirp4 etwatq50 cache-14h2zyo"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          />
        </svg>
      </div>
      <div>
        Choice
      </div>
      <input
        aria-checked="false"
        class="cache-cujed6 e1duuirp1"
        id="radio-choice"
        name="radio"
        tabindex="0"
        type="radio"
        value="choice"
      />
    </label>
    <div
      class="e14o3tsk0 cache-x3o9mj"
    >
      <div
        class="cache-sejyyr e1duuirp0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-z0gtcm {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-z0gtcm:hover .e1duuirp3,
.cache-z0gtcm:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-z0gtcm:hover .e1duuirp3>.e1duuirp4,
.cache-z0gtcm:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-d37612 {
  fill: #4f0599;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-d37612.cache-d37612 {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-x3o9mj {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      class="e1duuirp2 e1g1zfwd0 cache-z0gtcm"
      for="radio-choice"
    >
      <div
        class="cache-tn3xtd e1duuirp3"
      >
        <svg
          class="e1duuirp4 etwatq50 cache-d37612"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
          />
        </svg>
      </div>
      <div>
        Choice
      </div>
      <input
        aria-checked="true"
        checked=""
        class="cache-cujed6 e1duuirp1"
        id="radio-choice"
        name="radio"
        tabindex="0"
        type="radio"
        value="choice"
      />
    </label>
    <div
      class="e14o3tsk0 cache-x3o9mj"
    >
      <div
        class="cache-sejyyr e1duuirp0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-l2072z {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
  color: #c4c9d6;
  cursor: not-allowed;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-yvpov9 {
  fill: #f6f5f7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-yvpov9.cache-yvpov9 {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-x3o9mj {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      class="e1duuirp2 e1g1zfwd0 cache-l2072z"
      disabled=""
      for="radio-choice"
    >
      <div
        class="cache-tn3xtd e1duuirp3"
      >
        <svg
          class="e1duuirp4 etwatq50 cache-yvpov9"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          />
        </svg>
      </div>
      <div>
        Choice
      </div>
      <input
        aria-checked="false"
        aria-disabled="true"
        class="cache-cujed6 e1duuirp1"
        disabled=""
        id="radio-choice"
        name="radio"
        style="pointer-events: none;"
        type="radio"
        value="choice"
      />
    </label>
    <div
      class="e14o3tsk0 cache-x3o9mj"
    >
      <div
        class="cache-sejyyr e1duuirp0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when error 1`] = `
<DocumentFragment>
  .cache-z0gtcm {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-z0gtcm:hover .e1duuirp3,
.cache-z0gtcm:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-z0gtcm:hover .e1duuirp3>.e1duuirp4,
.cache-z0gtcm:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-1i7hkfc {
  fill: #ef5774;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1i7hkfc.cache-1i7hkfc {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-bnyspz {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 5000px;
  opacity: 1;
  overflow: visible;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      class="e1duuirp2 e1g1zfwd0 cache-z0gtcm"
      for="radio-choice"
    >
      <div
        class="cache-tn3xtd e1duuirp3"
      >
        <svg
          class="e1duuirp4 etwatq50 cache-1i7hkfc"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          />
        </svg>
      </div>
      <div>
        Choice
      </div>
      <input
        aria-checked="false"
        class="cache-cujed6 e1duuirp1"
        id="radio-choice"
        name="radio"
        tabindex="0"
        type="radio"
        value="choice"
      />
    </label>
    <div
      class="e14o3tsk0 cache-bnyspz"
    >
      <div
        class="cache-sejyyr e1duuirp0"
      >
        Invalid value
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when valid 1`] = `
<DocumentFragment>
  .cache-z0gtcm {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-z0gtcm:hover .e1duuirp3,
.cache-z0gtcm:focus .e1duuirp3 {
  background-color: rgba(215,204,240,0.25);
  border-radius: 50%;
}

.cache-z0gtcm:hover .e1duuirp3>.e1duuirp4,
.cache-z0gtcm:focus .e1duuirp3>.e1duuirp4 {
  fill: #390171;
}

.cache-tn3xtd {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-1o781xh {
  fill: #45d6b5;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1o781xh.cache-1o781xh {
  vertical-align: middle;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-x3o9mj {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-sejyyr {
  font-size: 12px;
  color: #DD3252;
  padding: 0 4px;
}

<div
    class="cache-3svqc9"
  >
    <label
      class="e1duuirp2 e1g1zfwd0 cache-z0gtcm"
      for="radio-choice"
    >
      <div
        class="cache-tn3xtd e1duuirp3"
      >
        <svg
          class="e1duuirp4 etwatq50 cache-1o781xh"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          />
        </svg>
      </div>
      <div>
        Choice
      </div>
      <input
        aria-checked="false"
        class="cache-cujed6 e1duuirp1"
        id="radio-choice"
        name="radio"
        tabindex="0"
        type="radio"
        value="choice"
      />
    </label>
    <div
      class="e14o3tsk0 cache-x3o9mj"
    >
      <div
        class="cache-sejyyr e1duuirp0"
      />
    </div>
  </div>
</DocumentFragment>
`;
